--- a/styles/globals.css
+++ b/styles/globals.css
@@ -122,6 +122,10 @@
   }
 }
 
+.leaflet-container {
+  z-index: 1 !important; /* hamesha low rakho */
+}
+
 
 @tailwind base;
 @tailwind components;
